Some prototyping on the timeline

--- a/app/assets/css/app.scss
+++ b/app/assets/css/app.scss
@@ -1,1 +1,63 @@
 @import "~bootstrap/scss/bootstrap";
+
+$timeline-color: #00ccff;
+$timeline-point-color: #0004ff;
+$timeline-point-color-hover: #0084ff;
+
+.timeline-container {
+    text-align: center;
+    position: relative;
+}
+
+
+.timeline-container::before {
+    content: '';
+    position: absolute;
+    top: 15px;
+    left: 0;
+    border-top: 1px solid $timeline-color;
+    background: $timeline-color;
+    width: 100%;
+    transform: translateY(-50%);
+}
+
+.timeline {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    overflow: auto;
+}
+
+.timeline-point::before {
+    content: '';
+    position: absolute;
+    left: 50%;
+    width: 10px;
+    height: 10px;
+    background-color: $timeline-point-color;
+    border-radius: 50%;
+    @include transition(background-color .2s);
+}
+
+.timeline-point:hover::before {
+    background-color: $timeline-point-color-hover;
+}
+
+.timeline-point {
+    margin-top: 10px;
+    position: relative;
+    min-width: 200px;
+    //height: 10px;
+    //background: $timeline-point-color;
+    //border-radius: 50%;
+}
+
+
+
+.point-header {
+    margin-top: 10px;
+    //background: white;
+    //border: 1px solid #c7c7c7;
+    border-radius: 5px;
+    padding: 5px;
+}
